# CMaketest1

./: 6zadacha3.cpp  CMakeLists.txt  Cheterexyg.cpp  Cheterexyg.h  Figura.cpp  Figura.h  Kvadrat.cpp  Kvadrat.h  Parallelog.cpp  Parallelog.h  Pryamoyg.cpp  Pryamoyg.h  README.md  Romb.cpp  Romb.h  Treug.cpp  Treug.h  Treug_pryamoyg.cpp  Treug_pryamoyg.h  Treug_ravnobed.cpp  Treug_ravnobed.h  Treug_ravnostor.cpp  Treug_ravnostor.h
